k8s_resource/route/argocd-httproute.yaml
# argocd-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
    - name: main-gateway
      namespace: infra
      sectionName: argocd-http
  hostnames:
    - argocd.daeng-map.store
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
