k8s_resource/route/backend-dev-route.yaml
# backend-prod-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-route
  namespace: dev
spec:
  parentRefs:
    - name: main-gateway
      sectionName: dev-http
    - name: main-gateway
      sectionName: dev-https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
        - path:
            type: PathPrefix
            value: /ws
      backendRefs:
        - name: daeng-map-be-dev-backend
          port: 8080
