k8s_resource/route/frontend-dev-route.yaml
# frontend-prod-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: dev
spec:
  parentRefs:
    - name: main-gateway
      sectionName: http
    - name: main-gateway
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: daeng-map-fe-dev-frontend
          port: 3000
