k8s_resource/route/frontend-prod-route.yaml
# frontend-prod-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: prod
spec:
  parentRefs:
  - name: main-gateway
    sectionName: http
  - name: main-gateway
    sectionName: https
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
      - name: daeng-map-fe-frontend
        port: 3000
